import assert from 'node:assert/strict';
import {test as nodeTest} from 'node:test';
import plugin from '../index.js';
import {getTester} from './utils/test.js';

const {test, rule} = getTester(import.meta);
const MESSAGE_ID = 'no-layout-animations';

// Keep the expected catalog independent of the rule and its shorthand derivation.
const layoutProperties = [
	'width',
	'height',
	'min-width',
	'min-height',
	'max-width',
	'max-height',
	'inline-size',
	'block-size',
	'min-inline-size',
	'min-block-size',
	'max-inline-size',
	'max-block-size',
	'top',
	'right',
	'bottom',
	'left',
	'inset-block-start',
	'inset-block-end',
	'inset-inline-start',
	'inset-inline-end',
	'margin-top',
	'margin-right',
	'margin-bottom',
	'margin-left',
	'margin-block-start',
	'margin-block-end',
	'margin-inline-start',
	'margin-inline-end',
	'padding-top',
	'padding-right',
	'padding-bottom',
	'padding-left',
	'padding-block-start',
	'padding-block-end',
	'padding-inline-start',
	'padding-inline-end',
	'border-top-width',
	'border-right-width',
	'border-bottom-width',
	'border-left-width',
	'border-block-start-width',
	'border-block-end-width',
	'border-inline-start-width',
	'border-inline-end-width',
	'row-gap',
	'column-gap',
	'flex-basis',
	'flex-grow',
	'flex-shrink',
	'grid-template-columns',
	'grid-template-rows',
	'grid-auto-columns',
	'grid-auto-rows',
	'font-size',
	'line-height',
	'letter-spacing',
	'word-spacing',
	'border',
	'border-width',
	'border-top',
	'border-right',
	'border-bottom',
	'border-left',
	'border-block',
	'border-block-width',
	'border-block-start',
	'border-block-end',
	'border-inline',
	'border-inline-width',
	'border-inline-start',
	'border-inline-end',
	'flex',
	'font',
	'gap',
	'grid',
	'grid-template',
	'inset',
	'inset-block',
	'inset-inline',
	'margin',
	'margin-block',
	'margin-inline',
	'padding',
	'padding-block',
	'padding-inline',
];

const excludedProperties = [
	'opacity',
	'transform',
	'translate',
	'rotate',
	'scale',
	'filter',
	'backdrop-filter',
	'color',
	'background',
	'background-color',
	'background-position',
	'box-shadow',
	'text-shadow',
	'border-color',
	'border-top-color',
	'border-inline-color',
	'border-style',
	'border-block-style',
	'border-radius',
	'border-image',
	'border-image-width',
	'outline',
	'outline-width',
	'border-spacing',
	'aspect-ratio',
	'columns',
	'column-width',
	'column-count',
	'font-weight',
	'font-family',
	'font-stretch',
	'font-variation-settings',
	'text-indent',
	'display',
	'position',
	'overflow',
	'align-items',
	'justify-content',
	'place-content',
	'grid-area',
	'grid-row',
	'grid-column',
	'grid-template-areas',
	'grid-auto-flow',
	'flex-flow',
	'flex-direction',
	'flex-wrap',
	'order',
	'scroll-margin',
	'scroll-padding',
	'grid-gap',
	'grid-row-gap',
	'grid-column-gap',
	'--width',
	'unknown-property',
	'constructor',
	'__proto__',
];

test({
	valid: excludedProperties.flatMap(property => [
		`a { transition-property: ${property}; }`,
		`@keyframes example { to { ${property}: initial; } }`,
	]),
	invalid: layoutProperties.flatMap(property => [
		{
			code: `a { transition-property: ${property}; }`,
			errors: [{messageId: MESSAGE_ID, data: {property}, suggestions: 0}],
		},
		{
			code: `@keyframes example { to { ${property}: initial; } }`,
			errors: [{messageId: MESSAGE_ID, data: {property}, suggestions: 0}],
		},
	]),
});

test.snapshot({
	valid: [
		'a { width: 100px; height: 100px; padding: 1rem; }',
		'a { animation: resize 1s; animation-name: width; will-change: width; }',
		'a { transition: opacity 1s ease, transform 200ms steps(2, end); }',
		'a { transition: all 200ms; transition-property: all; }',
		'a { transition: 200ms ease, opacity 1s; }',
		'a { transition: none; transition-property: none; }',
		...['inherit', 'initial', 'unset', 'revert', 'revert-layer'].map(value => `a { transition: ${value}; transition-property: ${value}; }`),
		'a { TRANSITION: OPACITY 1s; TRANSITION-PROPERTY: TRANSFORM; }',
		'a { transition: var(--transition, width 1s); transition-property: var(--property, height); }',
		'a { transition: ease var(--transition); transition-property: env(properties, width); }',
		'a { transition: attr(data-transition); transition-property: custom(width); }',
		'a { transition: "width"; transition-property: url("height"); }',
		'a { --transition: width 1s; --transition-property: height; }',
		'a { transition: --width 1s; transition-property: --height; }',
		'a { transition: opacity 1s /* width */, transform 1s /* height */; }',
		'a { transition: ease ease 1s, normal normal 1s; }',
		'a { transition-property: blocK-size, İnset; }',
		'@supports (transition: width 1s) {}',
		'@container style(transition-property: height) {}',
		'@import "a.css" supports(transition: width 1s);',
		'@font-face { transition: width 1s; }',
		'@property --size { transition-property: height; }',
		'@font-palette-values --palette { transition: width 1s; }',
		':export { transition: width 1s; } :import("a.css") { transition-property: height; }',
		String.raw`:EXPORT { transition: width 1s; } :\69 mport("a.css") { transition-property: height; }`,
		'@keyframes example { from { opacity: 0; } to { transform: translateX(1rem); } }',
		'@keyframes example { to { --width: 100px; content: "width: 10px"; } }',
		'@keyframes example { to { width: 100px !important; height: 100px ! IMPORTANT; } }',
		'@keyframes example { to { padding: 1rem !/**/important; } }',
		String.raw`@keyframes example { to { width: 100px !impor\74 ant; } }`,
		String.raw`@keyframes example { to { width: 100px !\49 MPORTANT; } }`,
		'@keyframes example { to { transition: width 1s; transition-property: height; } }',
		'@keyframes example {}',
		'@keyframes example;',
		{
			code: '@custom-descriptors { transition: width 1s; transition-property: height; }',
			languageOptions: {customSyntax: {atrules: {'custom-descriptors': {descriptors: {transition: '<custom-ident>'}}}}},
		},
	],
	invalid: [
		'a { transition: width 200ms ease; }',
		'a { transition: 200ms width ease; }',
		'a { transition: ease 200ms width; }',
		'a { transition: 200ms cubic-bezier(0, 0, 1, 1) width -100ms; }',
		'a { transition: opacity 1s, height 200ms, margin-inline 1s; }',
		'a { transition-property: width, opacity, height, width; }',
		'a { transition: width var(--duration); }',
		'a { transition: var(--transition), height 1s; transition-property: var(--property), padding; }',
		'a { transition: width calc(1s + var(--delay)); }',
		'a { transition: width 0s; }',
		'a { transition-property: width; transition-duration: 0s; }',
		'a { transition: width 1s; transition-property: opacity; }',
		'a { TRANSITION: WIDTH 200MS; TRANSITION-PROPERTY: MARGIN-INLINE; }',
		String.raw`a { tr\61 nsition: \77 idth 200ms; transition\2d property: p\61 dding; }`,
		String.raw`a { transition-property: \000068 eight; }`,
		'a { -webkit-transition: width 1s; -moz-transition-property: height; -o-transition: padding 1s; }',
		String.raw`a { -w\65 bkit-transition: width 1s; }`,
		'a { transition: /* before */ width/**/ 1s /* after */ !important; }',
		'a { transition-property: margin-inline; & > b { transition: height 1s; } }',
		'@media print { a { transition: width 1s; } }',
		'@supports (transition: width 1s) { a { transition: height 1s; } }',
		'@container (width > 1px) { a { transition-property: padding; } }',
		'@layer components { a { transition: width 1s; } }',
		'@scope (.card) { a { transition-property: height; } }',
		'a { @media print { transition: width 1s; } }',
		'a { @supports (display: grid) { transition-property: gap; } }',
		'a { @container (width > 1px) { transition: padding 1s; } }',
		'a { @starting-style { transition-property: width; } }',
		'@starting-style { a { transition: height 1s; } }',
		'@keyframes resize { from { width: 0; } to { width: 100px; } }',
		'@keyframes resize { 0%, 50% { margin: 1rem; } 100% { padding: 2rem; } }',
		'@keyframes resize { entry 100% { height: 10px; } }',
		'@keyframes unused { from { width: 100px; } to { width: 100px; } }',
		'@keyframes resize { to { height: var(--height); } }',
		'@keyframes resize { to { width: 100px !important; height: 100px; } }',
		'@keyframes resize { to { border: red; font: 1rem serif; } }',
		'@KEYFRAMES resize { TO { INLINE-SIZE: 100px; } }',
		String.raw`@\6b eyframes resize { to { p\61 dding: 1rem; } }`,
		'@-webkit-keyframes resize { to { height: 100px; } }',
		'@-moz-keyframes resize { to { width: 100px; } }',
		'@-o-keyframes resize { to { margin: 1rem; } }',
		'@keyframes "resize" { to { height: 100px; } }',
		'@media print { @supports (display: grid) { @keyframes resize { to { grid-template-rows: 1fr; } } } }',
		'@keyframes resize { to { /* before */ width/**/: 100px /* after */; } }',
		':export, .card { transition-property: width; }',
	],
});

test({
	valid: [],
	invalid: [
		{
			code: 'a {\n\ttransition: 1s width;\n}',
			errors: [{
				messageId: MESSAGE_ID, data: {property: 'width'}, line: 2, column: 17, endLine: 2, endColumn: 22, suggestions: 0,
			}],
		},
		{
			code: '@keyframes resize {\r\n  to {\r\n    height: 100px;\r\n  }\r\n}',
			errors: [{
				messageId: MESSAGE_ID, data: {property: 'height'}, line: 3, column: 5, endLine: 3, endColumn: 18, suggestions: 0,
			}],
		},
	],
});

nodeTest('layout animations are opt-in and cannot be automatically changed', () => {
	assert.equal(rule.meta.type, 'suggestion');
	assert.equal(rule.meta.fixable, undefined);
	assert.equal(rule.meta.hasSuggestions, undefined);
	assert.deepEqual(rule.meta.schema, []);
	assert.equal(plugin.configs.recommended.rules['cssicorn/no-layout-animations'], 'off');
	assert.equal(plugin.configs.unopinionated.rules['cssicorn/no-layout-animations'], 'off');
	assert.equal(plugin.configs.all.rules['cssicorn/no-layout-animations'], 'error');
});
