exports[`invalid(1): a { transition: width 200ms ease; } 1`] = `

  1 | a { transition: width 200ms ease; }

`;

exports[`invalid(1): a { transition: width 200ms ease; } 2`] = `

Message:
> 1 | a { transition: width 200ms ease; }
    |                 ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(10): a { transition: width 0s; } 1`] = `

  1 | a { transition: width 0s; }

`;

exports[`invalid(10): a { transition: width 0s; } 2`] = `

Message:
> 1 | a { transition: width 0s; }
    |                 ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(11): a { transition-property: width; transition-duration: 0s; } 1`] = `

  1 | a { transition-property: width; transition-duration: 0s; }

`;

exports[`invalid(11): a { transition-property: width; transition-duration: 0s; } 2`] = `

Message:
> 1 | a { transition-property: width; transition-duration: 0s; }
    |                          ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(12): a { transition: width 1s; transition-property: opacity; } 1`] = `

  1 | a { transition: width 1s; transition-property: opacity; }

`;

exports[`invalid(12): a { transition: width 1s; transition-property: opacity; } 2`] = `

Message:
> 1 | a { transition: width 1s; transition-property: opacity; }
    |                 ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(13): a { TRANSITION: WIDTH 200MS; TRANSITION-PROPERTY: MARGIN-INLINE; } 1`] = `

  1 | a { TRANSITION: WIDTH 200MS; TRANSITION-PROPERTY: MARGIN-INLINE; }

`;

exports[`invalid(13): a { TRANSITION: WIDTH 200MS; TRANSITION-PROPERTY: MARGIN-INLINE; } 2`] = `

Message:
> 1 | a { TRANSITION: WIDTH 200MS; TRANSITION-PROPERTY: MARGIN-INLINE; }
    |                 ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(13): a { TRANSITION: WIDTH 200MS; TRANSITION-PROPERTY: MARGIN-INLINE; } 3`] = `

Message:
> 1 | a { TRANSITION: WIDTH 200MS; TRANSITION-PROPERTY: MARGIN-INLINE; }
    |                                                   ^^^^^^^^^^^^^ Avoid animating 'margin-inline', which can affect layout.

`;

exports[`invalid(14): a { tr\\61 nsition: \\77 idth 200ms; transition\\2d property: p\\61 dding; } 1`] = `

  1 | a { tr\\61 nsition: \\77 idth 200ms; transition\\2d property: p\\61 dding; }

`;

exports[`invalid(14): a { tr\\61 nsition: \\77 idth 200ms; transition\\2d property: p\\61 dding; } 2`] = `

Message:
> 1 | a { tr\\61 nsition: \\77 idth 200ms; transition\\2d property: p\\61 dding; }
    |                    ^^^^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(14): a { tr\\61 nsition: \\77 idth 200ms; transition\\2d property: p\\61 dding; } 3`] = `

Message:
> 1 | a { tr\\61 nsition: \\77 idth 200ms; transition\\2d property: p\\61 dding; }
    |                                                            ^^^^^^^^^^ Avoid animating 'padding', which can affect layout.

`;

exports[`invalid(15): a { transition-property: \\000068 eight; } 1`] = `

  1 | a { transition-property: \\000068 eight; }

`;

exports[`invalid(15): a { transition-property: \\000068 eight; } 2`] = `

Message:
> 1 | a { transition-property: \\000068 eight; }
    |                          ^^^^^^^^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(16): a { -webkit-transition: width 1s; -moz-transition-property: height; -o-transition: padding 1s; } 1`] = `

  1 | a { -webkit-transition: width 1s; -moz-transition-property: height; -o-transition: padding 1s; }

`;

exports[`invalid(16): a { -webkit-transition: width 1s; -moz-transition-property: height; -o-transition: padding 1s; } 2`] = `

Message:
> 1 | a { -webkit-transition: width 1s; -moz-transition-property: height; -o-transition: padding 1s; }
    |                         ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(16): a { -webkit-transition: width 1s; -moz-transition-property: height; -o-transition: padding 1s; } 3`] = `

Message:
> 1 | a { -webkit-transition: width 1s; -moz-transition-property: height; -o-transition: padding 1s; }
    |                                                             ^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(16): a { -webkit-transition: width 1s; -moz-transition-property: height; -o-transition: padding 1s; } 4`] = `

Message:
> 1 | a { -webkit-transition: width 1s; -moz-transition-property: height; -o-transition: padding 1s; }
    |                                                                                    ^^^^^^^ Avoid animating 'padding', which can affect layout.

`;

exports[`invalid(17): a { -w\\65 bkit-transition: width 1s; } 1`] = `

  1 | a { -w\\65 bkit-transition: width 1s; }

`;

exports[`invalid(17): a { -w\\65 bkit-transition: width 1s; } 2`] = `

Message:
> 1 | a { -w\\65 bkit-transition: width 1s; }
    |                            ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(18): a { transition: /* before */ width/**/ 1s /* after */ !important; } 1`] = `

  1 | a { transition: /* before */ width/**/ 1s /* after */ !important; }

`;

exports[`invalid(18): a { transition: /* before */ width/**/ 1s /* after */ !important; } 2`] = `

Message:
> 1 | a { transition: /* before */ width/**/ 1s /* after */ !important; }
    |                              ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(19): a { transition-property: margin-inline; & > b { transition: height 1s; } } 1`] = `

  1 | a { transition-property: margin-inline; & > b { transition: height 1s; } }

`;

exports[`invalid(19): a { transition-property: margin-inline; & > b { transition: height 1s; } } 2`] = `

Message:
> 1 | a { transition-property: margin-inline; & > b { transition: height 1s; } }
    |                          ^^^^^^^^^^^^^ Avoid animating 'margin-inline', which can affect layout.

`;

exports[`invalid(19): a { transition-property: margin-inline; & > b { transition: height 1s; } } 3`] = `

Message:
> 1 | a { transition-property: margin-inline; & > b { transition: height 1s; } }
    |                                                             ^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(2): a { transition: 200ms width ease; } 1`] = `

  1 | a { transition: 200ms width ease; }

`;

exports[`invalid(2): a { transition: 200ms width ease; } 2`] = `

Message:
> 1 | a { transition: 200ms width ease; }
    |                       ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(20): @media print { a { transition: width 1s; } } 1`] = `

  1 | @media print { a { transition: width 1s; } }

`;

exports[`invalid(20): @media print { a { transition: width 1s; } } 2`] = `

Message:
> 1 | @media print { a { transition: width 1s; } }
    |                                ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(21): @supports (transition: width 1s) { a { transition: height 1s; } } 1`] = `

  1 | @supports (transition: width 1s) { a { transition: height 1s; } }

`;

exports[`invalid(21): @supports (transition: width 1s) { a { transition: height 1s; } } 2`] = `

Message:
> 1 | @supports (transition: width 1s) { a { transition: height 1s; } }
    |                                                    ^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(22): @container (width > 1px) { a { transition-property: padding; } } 1`] = `

  1 | @container (width > 1px) { a { transition-property: padding; } }

`;

exports[`invalid(22): @container (width > 1px) { a { transition-property: padding; } } 2`] = `

Message:
> 1 | @container (width > 1px) { a { transition-property: padding; } }
    |                                                     ^^^^^^^ Avoid animating 'padding', which can affect layout.

`;

exports[`invalid(23): @layer components { a { transition: width 1s; } } 1`] = `

  1 | @layer components { a { transition: width 1s; } }

`;

exports[`invalid(23): @layer components { a { transition: width 1s; } } 2`] = `

Message:
> 1 | @layer components { a { transition: width 1s; } }
    |                                     ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(24): @scope (.card) { a { transition-property: height; } } 1`] = `

  1 | @scope (.card) { a { transition-property: height; } }

`;

exports[`invalid(24): @scope (.card) { a { transition-property: height; } } 2`] = `

Message:
> 1 | @scope (.card) { a { transition-property: height; } }
    |                                           ^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(25): a { @media print { transition: width 1s; } } 1`] = `

  1 | a { @media print { transition: width 1s; } }

`;

exports[`invalid(25): a { @media print { transition: width 1s; } } 2`] = `

Message:
> 1 | a { @media print { transition: width 1s; } }
    |                                ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(26): a { @supports (display: grid) { transition-property: gap; } } 1`] = `

  1 | a { @supports (display: grid) { transition-property: gap; } }

`;

exports[`invalid(26): a { @supports (display: grid) { transition-property: gap; } } 2`] = `

Message:
> 1 | a { @supports (display: grid) { transition-property: gap; } }
    |                                                      ^^^ Avoid animating 'gap', which can affect layout.

`;

exports[`invalid(27): a { @container (width > 1px) { transition: padding 1s; } } 1`] = `

  1 | a { @container (width > 1px) { transition: padding 1s; } }

`;

exports[`invalid(27): a { @container (width > 1px) { transition: padding 1s; } } 2`] = `

Message:
> 1 | a { @container (width > 1px) { transition: padding 1s; } }
    |                                            ^^^^^^^ Avoid animating 'padding', which can affect layout.

`;

exports[`invalid(28): a { @starting-style { transition-property: width; } } 1`] = `

  1 | a { @starting-style { transition-property: width; } }

`;

exports[`invalid(28): a { @starting-style { transition-property: width; } } 2`] = `

Message:
> 1 | a { @starting-style { transition-property: width; } }
    |                                            ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(29): @starting-style { a { transition: height 1s; } } 1`] = `

  1 | @starting-style { a { transition: height 1s; } }

`;

exports[`invalid(29): @starting-style { a { transition: height 1s; } } 2`] = `

Message:
> 1 | @starting-style { a { transition: height 1s; } }
    |                                   ^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(3): a { transition: ease 200ms width; } 1`] = `

  1 | a { transition: ease 200ms width; }

`;

exports[`invalid(3): a { transition: ease 200ms width; } 2`] = `

Message:
> 1 | a { transition: ease 200ms width; }
    |                            ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(30): @keyframes resize { from { width: 0; } to { width: 100px; } } 1`] = `

  1 | @keyframes resize { from { width: 0; } to { width: 100px; } }

`;

exports[`invalid(30): @keyframes resize { from { width: 0; } to { width: 100px; } } 2`] = `

Message:
> 1 | @keyframes resize { from { width: 0; } to { width: 100px; } }
    |                            ^^^^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(30): @keyframes resize { from { width: 0; } to { width: 100px; } } 3`] = `

Message:
> 1 | @keyframes resize { from { width: 0; } to { width: 100px; } }
    |                                             ^^^^^^^^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(31): @keyframes resize { 0%, 50% { margin: 1rem; } 100% { padding: 2rem; } } 1`] = `

  1 | @keyframes resize { 0%, 50% { margin: 1rem; } 100% { padding: 2rem; } }

`;

exports[`invalid(31): @keyframes resize { 0%, 50% { margin: 1rem; } 100% { padding: 2rem; } } 2`] = `

Message:
> 1 | @keyframes resize { 0%, 50% { margin: 1rem; } 100% { padding: 2rem; } }
    |                               ^^^^^^^^^^^^ Avoid animating 'margin', which can affect layout.

`;

exports[`invalid(31): @keyframes resize { 0%, 50% { margin: 1rem; } 100% { padding: 2rem; } } 3`] = `

Message:
> 1 | @keyframes resize { 0%, 50% { margin: 1rem; } 100% { padding: 2rem; } }
    |                                                      ^^^^^^^^^^^^^ Avoid animating 'padding', which can affect layout.

`;

exports[`invalid(32): @keyframes resize { entry 100% { height: 10px; } } 1`] = `

  1 | @keyframes resize { entry 100% { height: 10px; } }

`;

exports[`invalid(32): @keyframes resize { entry 100% { height: 10px; } } 2`] = `

Message:
> 1 | @keyframes resize { entry 100% { height: 10px; } }
    |                                  ^^^^^^^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(33): @keyframes unused { from { width: 100px; } to { width: 100px; } } 1`] = `

  1 | @keyframes unused { from { width: 100px; } to { width: 100px; } }

`;

exports[`invalid(33): @keyframes unused { from { width: 100px; } to { width: 100px; } } 2`] = `

Message:
> 1 | @keyframes unused { from { width: 100px; } to { width: 100px; } }
    |                            ^^^^^^^^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(33): @keyframes unused { from { width: 100px; } to { width: 100px; } } 3`] = `

Message:
> 1 | @keyframes unused { from { width: 100px; } to { width: 100px; } }
    |                                                 ^^^^^^^^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(34): @keyframes resize { to { height: var(--height); } } 1`] = `

  1 | @keyframes resize { to { height: var(--height); } }

`;

exports[`invalid(34): @keyframes resize { to { height: var(--height); } } 2`] = `

Message:
> 1 | @keyframes resize { to { height: var(--height); } }
    |                          ^^^^^^^^^^^^^^^^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(35): @keyframes resize { to { width: 100px !important; height: 100px; } } 1`] = `

  1 | @keyframes resize { to { width: 100px !important; height: 100px; } }

`;

exports[`invalid(35): @keyframes resize { to { width: 100px !important; height: 100px; } } 2`] = `

Message:
> 1 | @keyframes resize { to { width: 100px !important; height: 100px; } }
    |                                                   ^^^^^^^^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(36): @keyframes resize { to { border: red; font: 1rem serif; } } 1`] = `

  1 | @keyframes resize { to { border: red; font: 1rem serif; } }

`;

exports[`invalid(36): @keyframes resize { to { border: red; font: 1rem serif; } } 2`] = `

Message:
> 1 | @keyframes resize { to { border: red; font: 1rem serif; } }
    |                          ^^^^^^^^^^^ Avoid animating 'border', which can affect layout.

`;

exports[`invalid(36): @keyframes resize { to { border: red; font: 1rem serif; } } 3`] = `

Message:
> 1 | @keyframes resize { to { border: red; font: 1rem serif; } }
    |                                       ^^^^^^^^^^^^^^^^ Avoid animating 'font', which can affect layout.

`;

exports[`invalid(37): @KEYFRAMES resize { TO { INLINE-SIZE: 100px; } } 1`] = `

  1 | @KEYFRAMES resize { TO { INLINE-SIZE: 100px; } }

`;

exports[`invalid(37): @KEYFRAMES resize { TO { INLINE-SIZE: 100px; } } 2`] = `

Message:
> 1 | @KEYFRAMES resize { TO { INLINE-SIZE: 100px; } }
    |                          ^^^^^^^^^^^^^^^^^^ Avoid animating 'inline-size', which can affect layout.

`;

exports[`invalid(38): @\\6b eyframes resize { to { p\\61 dding: 1rem; } } 1`] = `

  1 | @\\6b eyframes resize { to { p\\61 dding: 1rem; } }

`;

exports[`invalid(38): @\\6b eyframes resize { to { p\\61 dding: 1rem; } } 2`] = `

Message:
> 1 | @\\6b eyframes resize { to { p\\61 dding: 1rem; } }
    |                             ^^^^^^^^^^^^^^^^ Avoid animating 'padding', which can affect layout.

`;

exports[`invalid(39): @-webkit-keyframes resize { to { height: 100px; } } 1`] = `

  1 | @-webkit-keyframes resize { to { height: 100px; } }

`;

exports[`invalid(39): @-webkit-keyframes resize { to { height: 100px; } } 2`] = `

Message:
> 1 | @-webkit-keyframes resize { to { height: 100px; } }
    |                                  ^^^^^^^^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(4): a { transition: 200ms cubic-bezier(0, 0, 1, 1) width -100ms; } 1`] = `

  1 | a { transition: 200ms cubic-bezier(0, 0, 1, 1) width -100ms; }

`;

exports[`invalid(4): a { transition: 200ms cubic-bezier(0, 0, 1, 1) width -100ms; } 2`] = `

Message:
> 1 | a { transition: 200ms cubic-bezier(0, 0, 1, 1) width -100ms; }
    |                                                ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(40): @-moz-keyframes resize { to { width: 100px; } } 1`] = `

  1 | @-moz-keyframes resize { to { width: 100px; } }

`;

exports[`invalid(40): @-moz-keyframes resize { to { width: 100px; } } 2`] = `

Message:
> 1 | @-moz-keyframes resize { to { width: 100px; } }
    |                               ^^^^^^^^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(41): @-o-keyframes resize { to { margin: 1rem; } } 1`] = `

  1 | @-o-keyframes resize { to { margin: 1rem; } }

`;

exports[`invalid(41): @-o-keyframes resize { to { margin: 1rem; } } 2`] = `

Message:
> 1 | @-o-keyframes resize { to { margin: 1rem; } }
    |                             ^^^^^^^^^^^^ Avoid animating 'margin', which can affect layout.

`;

exports[`invalid(42): @keyframes \"resize\" { to { height: 100px; } } 1`] = `

  1 | @keyframes "resize" { to { height: 100px; } }

`;

exports[`invalid(42): @keyframes \"resize\" { to { height: 100px; } } 2`] = `

Message:
> 1 | @keyframes "resize" { to { height: 100px; } }
    |                            ^^^^^^^^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(43): @media print { @supports (display: grid) { @keyframes resize { to { grid-template-rows: 1fr; } } } } 1`] = `

  1 | @media print { @supports (display: grid) { @keyframes resize { to { grid-template-rows: 1fr; } } } }

`;

exports[`invalid(43): @media print { @supports (display: grid) { @keyframes resize { to { grid-template-rows: 1fr; } } } } 2`] = `

Message:
> 1 | @media print { @supports (display: grid) { @keyframes resize { to { grid-template-rows: 1fr; } } } }
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^^^ Avoid animating 'grid-template-rows', which can affect layout.

`;

exports[`invalid(44): @keyframes resize { to { /* before */ width/**/: 100px /* after */; } } 1`] = `

  1 | @keyframes resize { to { /* before */ width/**/: 100px /* after */; } }

`;

exports[`invalid(44): @keyframes resize { to { /* before */ width/**/: 100px /* after */; } } 2`] = `

Message:
> 1 | @keyframes resize { to { /* before */ width/**/: 100px /* after */; } }
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(45): :export, .card { transition-property: width; } 1`] = `

  1 | :export, .card { transition-property: width; }

`;

exports[`invalid(45): :export, .card { transition-property: width; } 2`] = `

Message:
> 1 | :export, .card { transition-property: width; }
    |                                       ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(5): a { transition: opacity 1s, height 200ms, margin-inline 1s; } 1`] = `

  1 | a { transition: opacity 1s, height 200ms, margin-inline 1s; }

`;

exports[`invalid(5): a { transition: opacity 1s, height 200ms, margin-inline 1s; } 2`] = `

Message:
> 1 | a { transition: opacity 1s, height 200ms, margin-inline 1s; }
    |                             ^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(5): a { transition: opacity 1s, height 200ms, margin-inline 1s; } 3`] = `

Message:
> 1 | a { transition: opacity 1s, height 200ms, margin-inline 1s; }
    |                                           ^^^^^^^^^^^^^ Avoid animating 'margin-inline', which can affect layout.

`;

exports[`invalid(6): a { transition-property: width, opacity, height, width; } 1`] = `

  1 | a { transition-property: width, opacity, height, width; }

`;

exports[`invalid(6): a { transition-property: width, opacity, height, width; } 2`] = `

Message:
> 1 | a { transition-property: width, opacity, height, width; }
    |                          ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(6): a { transition-property: width, opacity, height, width; } 3`] = `

Message:
> 1 | a { transition-property: width, opacity, height, width; }
    |                                          ^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(6): a { transition-property: width, opacity, height, width; } 4`] = `

Message:
> 1 | a { transition-property: width, opacity, height, width; }
    |                                                  ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(7): a { transition: width var(--duration); } 1`] = `

  1 | a { transition: width var(--duration); }

`;

exports[`invalid(7): a { transition: width var(--duration); } 2`] = `

Message:
> 1 | a { transition: width var(--duration); }
    |                 ^^^^^ Avoid animating 'width', which can affect layout.

`;

exports[`invalid(8): a { transition: var(--transition), height 1s; transition-property: var(--property), padding; } 1`] = `

  1 | a { transition: var(--transition), height 1s; transition-property: var(--property), padding; }

`;

exports[`invalid(8): a { transition: var(--transition), height 1s; transition-property: var(--property), padding; } 2`] = `

Message:
> 1 | a { transition: var(--transition), height 1s; transition-property: var(--property), padding; }
    |                                    ^^^^^^ Avoid animating 'height', which can affect layout.

`;

exports[`invalid(8): a { transition: var(--transition), height 1s; transition-property: var(--property), padding; } 3`] = `

Message:
> 1 | a { transition: var(--transition), height 1s; transition-property: var(--property), padding; }
    |                                                                                     ^^^^^^^ Avoid animating 'padding', which can affect layout.

`;

exports[`invalid(9): a { transition: width calc(1s + var(--delay)); } 1`] = `

  1 | a { transition: width calc(1s + var(--delay)); }

`;

exports[`invalid(9): a { transition: width calc(1s + var(--delay)); } 2`] = `

Message:
> 1 | a { transition: width calc(1s + var(--delay)); }
    |                 ^^^^^ Avoid animating 'width', which can affect layout.

`;
